# computer-architecture-lab3

./: .gitignore  .gitlab-ci.yml  README.md  control_unit.py  datapath.py  golden_test.py  isa.py  machine.py  microprogram.py  pyproject.toml  simulation.py  translator.py
golden/: bubble_sort_alg.yml  bubble_sort_cache_demonstr.yml  bubble_sort_small_bus.yml  bubble_sort_small_cache.yml  cat.yml  cat_alg.yml  cat_full.yml  cat_short.yml  hello.yml  hello_alg.yml  hello_full.yml  hello_short.yml  hello_user.yml  hello_user_alg.yml  hello_user_full.yml  hello_user_short.yml  prob1_alg.yml  prob1_full.yml  prob1_short.yml
inputs/: text.txt
machine/: cache.py  control_unit.py  datapath.py  isa.py  microprogram.py
programs/: bubble_sort.txt  cat.txt  hello.txt  hello_user.txt  prob1.txt
